# aoc-2021

./: Cargo.toml  README.md  flake.nix
.github/workflows/: convent-commit.yml
day-01/: Cargo.toml
day-01/src/: lib.rs
day-02/: Cargo.toml
day-02/src/: lib.rs
day-03/: Cargo.toml
day-03/src/: lib.rs
src/: lib.rs
utils/src/: lib.rs
